Opened 9 years ago

Closed 8 years ago

#10840 closed bug (fixed)

Apps not abiding GUI colour definitions

Reported by: humdinger Owned by: Janus
Priority: normal Milestone: R1
Component: Applications Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

This is hrev47206.

After tweaking

B_MENU_SELECTED_BACKGROUND_COLOR
B_MENU_SELECTED_ITEM_TEXT_COLOR
B_LIST_SELECTED_BACKGROUND_COLOR
B_LIST_SELECTED_ITEM_TEXT_COLOR

(see #10834), I found these apps and preferences not using the changed colours:

Debugger.png

Devices.png

DriveSetup.png

FileTypes.png

HaikuDepot.png

I-O-M.png

Media.png

MediaPlayer-Playlist.png

Printers.png

ProcessController.png

Shortcuts.png

Sounds.png

Time.png

WebPositive.png

I'll attach a screenshot of each one.

Attachments (23)

Debugger.png (34.5 KB ) - added by humdinger 9 years ago.
Debugger.png
Devices.png (25.1 KB ) - added by humdinger 9 years ago.
Devices.png
DriveSetup.png (27.4 KB ) - added by humdinger 9 years ago.
DriveSetup.png
FileTypes.png (33.1 KB ) - added by humdinger 9 years ago.
FileTypes.png
HaikuDepot.png (36.0 KB ) - added by humdinger 9 years ago.
HaikuDepot.png
I-O-M.png (8.9 KB ) - added by humdinger 9 years ago.
I-O-M.png
Media.png (11.0 KB ) - added by humdinger 9 years ago.
Media.png
MediaPlayer-Playlist.png (13.1 KB ) - added by humdinger 9 years ago.
MediaPlayer-Playlist.png
Printers.png (13.4 KB ) - added by humdinger 9 years ago.
Printers.png
ProcessController.png (39.8 KB ) - added by humdinger 9 years ago.
ProcessController.png
Shortcuts.png (964.1 KB ) - added by humdinger 9 years ago.
Shortcuts.png
Sounds.png (14.1 KB ) - added by humdinger 9 years ago.
Sounds.png
Time.png (22.0 KB ) - added by humdinger 9 years ago.
Time.png
WebPositive.png (29.9 KB ) - added by humdinger 9 years ago.
WebPositive.png
0001-Use-user-color-for-selected-listItem-in-FileTypes-Me.patch (3.5 KB ) - added by Janus 9 years ago.
0001-Use-user-color-for-selected-menuItem-in-ProcessContr.patch (5.3 KB ) - added by Janus 9 years ago.
Default.png (56.0 KB ) - added by Janus 8 years ago.
BColumnListView with user color support.png (60.2 KB ) - added by Janus 8 years ago.
BColumnListView with user color support (Window without focus).png (59.2 KB ) - added by Janus 8 years ago.
BColumnListView with keyboard selection.png (62.2 KB ) - added by Janus 8 years ago.
Time.2.png (38.9 KB ) - added by Janus 8 years ago.
Time without seconds delimiter.png (39.2 KB ) - added by Janus 8 years ago.
Time with seconds.png (38.8 KB ) - added by Janus 8 years ago.

Download all attachments as: .zip

Change History (44)

by humdinger, 9 years ago

Attachment: Debugger.png added

Debugger.png

by humdinger, 9 years ago

Attachment: Devices.png added

Devices.png

by humdinger, 9 years ago

Attachment: DriveSetup.png added

DriveSetup.png

by humdinger, 9 years ago

Attachment: FileTypes.png added

FileTypes.png

by humdinger, 9 years ago

Attachment: HaikuDepot.png added

HaikuDepot.png

by humdinger, 9 years ago

Attachment: I-O-M.png added

I-O-M.png

by humdinger, 9 years ago

Attachment: Media.png added

Media.png

by humdinger, 9 years ago

Attachment: MediaPlayer-Playlist.png added

MediaPlayer-Playlist.png

by humdinger, 9 years ago

Attachment: Printers.png added

Printers.png

by humdinger, 9 years ago

Attachment: ProcessController.png added

ProcessController.png

by humdinger, 9 years ago

Attachment: Shortcuts.png added

Shortcuts.png

by humdinger, 9 years ago

Attachment: Sounds.png added

Sounds.png

by humdinger, 9 years ago

Attachment: Time.png added

Time.png

by humdinger, 9 years ago

Attachment: WebPositive.png added

WebPositive.png

comment:1 by waddlesplash, 9 years ago

The one for Web+ looks correct to me; as for most of the others, it looks like problems in the ColumnListView and TreeView implementations.

comment:2 by pulkomandy, 9 years ago

Web+ seems to be using the menu selection color for this highlight, which is a bit unexpected. But I think our color constant list doesn't have a better choice...

comment:3 by diver, 9 years ago

Description: modified (diff)

comment:4 by jessicah, 9 years ago

Owner: changed from nobody to jessicah
Status: newassigned

comment:5 by humdinger, 9 years ago

Tracker ignores colour settings as well, apparently.

comment:6 by Janus, 8 years ago

hrev49002 fixes the listItems in:

  • FileTypes
  • Media
  • Printers

menuItems in:

  • ProcessController

BColumnListView needs more thoughts.

Last edited 8 years ago by Janus (previous) (diff)

comment:7 by Janus, 8 years ago

hrev49053 fixes the WebPositive AdressBar.

Still to Fix BColumnListView, MediaPlayer and Icon-O-Matic Lists. For Time I don't know which color we should use.

comment:8 by humdinger, 8 years ago

I'd say using B_LIST_SELECTED_BACKGROUND_COLOR and B_LIST_SELECTED_ITEM_TEXT_COLOR for the selected day/month/year/time in the first tab would be adequate.

by Janus, 8 years ago

Attachment: Default.png added

comment:9 by Janus, 8 years ago

This is the current status the B_LIST_SELECTED_BACKGROUND_COLOR is darker (153, 153, 153) the BColumnListView selection is hardcoded (190, 190, 190).

comment:10 by Janus, 8 years ago

This is the BColumnListView using the B_LIST_SELECTED_BACKGROUND_COLOR choose by the user.

comment:11 by Janus, 8 years ago

In BColumnListView when the window lost focus the selected item is rendered with a lighter tint. This doesn't happen with list item.

by Janus, 8 years ago

Attachment: Time.2.png added

comment:12 by Janus, 8 years ago

humdinger do you expect this result?

in reply to:  8 comment:13 by Janus, 8 years ago

Replying to humdinger:

I'd say using B_LIST_SELECTED_BACKGROUND_COLOR and B_LIST_SELECTED_ITEM_TEXT_COLOR for the selected day/month/year/time in the first tab would be adequate.

If you want to use the B_LIST_SELECTED_BACKGROUND_COLOR in the spinners I think is inappropriate. Maybe we should use the B_MENU_SELECTED_BACKGROUND_COLOR. (Not sure)

Last edited 8 years ago by Janus (previous) (diff)

comment:14 by humdinger, 8 years ago

Yep, Time looks good. Not sure B_MENU_*_*_COLOR would be be more appropriate for the date spinner row on top than B_LIST_*_*_COLOR. It is a bit like a horizontal list, so one could argue for the latter...

BTW, have you noticed that the spinner row on top of the clock let's you also select the delimiters ":"? There's also another ":" to separate the seconds. But seconds aren't displayed, because that's not needed. Should I open another ticket for that or do you see a quick fix, while you're in that corner of the code anyway?

comment:15 by Janus, 8 years ago

I keep the spinners as they are for now, probably the best fit would be B_CONTROL_* unused at the moment in the UI. I suggested B_MENU_* not for a functional prospective but for a better color mix. The B_MENU_* grey should be darker than the B_LIST_* (the brain perceives difference). A grey on white look darker than the same grey on a lighter grey.

Without the delimiter the view look very ugly :-( What do you think?

by Janus, 8 years ago

Attachment: Time with seconds.png added

comment:16 by Janus, 8 years ago

With seconds looks good. I cannot find in the history why they were removed.

Last edited 8 years ago by Janus (previous) (diff)

comment:17 by humdinger, 8 years ago

You're right. Reintroduce the seconds to make it look better, though it probably isn't used other than by extreme cases of OCD... :) I'd say with network time, all these settings aren't really used much anyway...

comment:18 by Janus, 8 years ago

BColumnListView fixed in hrev49144

comment:19 by Janus, 8 years ago

MediaPlayer playlist fixed in hrev49145.

comment:20 by jessicah, 8 years ago

Owner: changed from jessicah to Janus

comment:21 by Janus, 8 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev49256.

Note: See TracTickets for help on using tickets.