FileTypes: Use list view color constants

...instead of hardcoding black.

Only you can prevent hard-coded colors.

Make sure to set both high color and low color so we don't get
anti-aliasing glitches.

Also, use be_control_look->DefaultLabelSpacing() instead of 5.0f.

Only you can prevent hard-coded label spacings.

Also return early if text is NULL (not set).

Fixes a small part of #10840